2015-03-05 belangeo <belangeo@gmail.com>

    * Changed license to the more permissive LGPL version 3.
    - rev 1303

2015-03-03 belangeo <belangeo@gmail.com>

    * The Server can be booted with a different number of input and output channels.
    - rev 1301

2015-03-03 belangeo <belangeo@gmail.com>

    * Wraped input of Record in an InputFader object.
    - rev 1300

2015-03-03 belangeo <belangeo@gmail.com>

    * Fixed bug in Hilbert object.
    - rev 1299

2015-02-18 belangeo <belangeo@gmail.com>

    * Added mul, add and sub methods to PyoTableObject. These methods can 
    take float, list or another PyoTableObject as argument.
    - rev 1298

2015-02-13 belangeo <belangeo@gmail.com>

    * Added new objet: AtanTable, generates arctangent transfert functions.
    - rev 1296

2015-02-11 belangeo <belangeo@gmail.com>

    * Fixed a bug when changing the looping mode of the Looper object.
    - rev 1295

2015-02-09 belangeo <belangeo@gmail.com>

    * Added a reset method to the Looper objet.
    - rev 1294

2015-02-08 belangeo <belangeo@gmail.com>

    * E-Pyo: Added a refresh button to actualize the content of the folder panel.
    - rev 1292

2015-02-07 belangeo <belangeo@gmail.com>

    * E-Pyo: Added a menu item to set a master document (the one that will be executed whatever 
    which one has the focus).
    - rev 1291

2015-02-03 belangeo <belangeo@gmail.com>

    * Added getServer, getSamplingRate and getBufferSize to PyoObjectBase. These methods can be 
    accessed from any pyo objects.
    - rev 1290

2015-02-03 belangeo <belangeo@gmail.com>

    * Fixed a bug with class method referenced inside pyo object. Save them as weak reference, 
    allowing the garbage collector to properly delete the objects when reference count falls to 0.
    - rev 1289

2015-02-02 belangeo <belangeo@gmail.com>

    * Added new objet: TableWrite, records values in a table at arbitrary location.
    - rev 1288

2015-01-29 belangeo <belangeo@gmail.com>
